# vectorme

./: .gitignore  CONVERSATION.md  README.md  pyproject.toml  start.sh  test.sh
.github/: copilot-instructions.md
vectorme/: __init__.py  config.yaml  vectorme.py
vectorme/htdemucs/: vectorme.py
vectorme/nemo_msdd_configs/: diar_infer_telephonic.yaml
vectorme/static/: README.md  app.js  index-original.html  index.html  styles.css
